<resources>

    <string name="app_name">BoundedDownloadApplication</string>
    <string name="prompt">Enter URL:</string>
    <string name="default_url">http://www.dre.vanderbilt.edu/~schmidt/ka.png</string>
    <string name="bound_sync_string">Run Download Synchronously </string>
    <string name="bound_async_string">Run Download Asynchronously </string>
    <string name="reset_image_string">Reset Image</string>
</resources>
